// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getEmailsForDistribution 1`] = `
Array [
  Object {
    "email": "stary@email.sk",
    "id": "===id1===",
    "rok": 2016,
  },
  Object {
    "email": "hana@sukdul.sk",
    "id": "===id2===",
    "rok": 2018,
  },
]
`;

exports[`getLatestEmail() - email má jen nějaký předešlý rok, ne poslední 1`] = `
Object {
  "email": "nejaky@email.sk",
  "id": "===id===",
  "rok": 2017,
}
`;

exports[`getLatestEmail() - poslední rok má email 1`] = `
Object {
  "email": "novy@email.sk",
  "id": "===id===",
  "rok": 2018,
}
`;

exports[`getLatestEmail() - vyřazen z distribuce 1`] = `
Object {
  "email": undefined,
  "id": "===id===",
  "rok": undefined,
}
`;

exports[`getLatestEmail() - žádné účasti 1`] = `
Object {
  "email": undefined,
  "id": "===id===",
  "rok": undefined,
}
`;

exports[`přihlaš účastníka 1`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [
          Object {
            "datum": 2017-11-19T00:00:00.000Z,
            "text": "první přihlášená",
          },
        ],
        "prihlaska": Object {
          "datum": 2017-11-18T00:00:00.000Z,
          "kategorie": Object {
            "__v": 0,
            "pohlavi": "žena",
            "typ": "maraton",
            "vek": Object {
              "max": 49,
              "min": 40,
            },
          },
          "startCislo": 44,
        },
        "rok": 2017,
        "udaje": Object {
          "email": "sk@nudle.cz",
          "jmeno": "Šárka",
          "klub": "SK Nudle",
          "narozeni": Object {
            "den": 7,
            "mesic": 12,
            "rok": 1977,
          },
          "obec": "Třebechovice pod Orebem",
          "pohlavi": "žena",
          "prijmeni": "Ženíšková",
          "stat": "Česká republika",
          "telefon": "732 187 987",
        },
      },
    ],
  },
]
`;

exports[`vytvoř účastníka s minimální účastí 1`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2017,
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1956,
          },
          "obec": "Ostrava",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník zaplatil ubytování 1`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [
          Object {
            "castka": 50,
            "datum": 2017-11-19T00:00:00.000Z,
            "typ": "hotově",
          },
        ],
        "poznamky": Array [],
        "rok": 2016,
        "ubytovani": Object {
          "pátek": Object {
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1956,
          },
          "obec": "Ostrava",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;
